<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_with_tb3_msgs</name>
  <version>0.3.1</version>
  <description>
    Messages and services package for OpenManipulator with TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="thlim@robotis.com">Darby Lim</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_with_tb3_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3_msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3_msgs/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
